# Liquid-liquid-phase-seperation

./: .gitignore  CMakeLists.txt  README.md
cmake/: add_gtest.cmake  fetch_boost.cmake
include/: aligned_allocator.hpp  grid.hpp
include/calculus/: differentiate.hpp  finite_difference.hpp  fourier_spectral.hpp
include/llps/: aligned_allocator.hpp  grid.hpp
include/llps/calculus/: differentiate.hpp
include/llps/utilities/: data_analytics.hpp  io.hpp  meta.hpp  timer.hpp
include/utilities/: data_analytics.hpp  io.hpp  meta.hpp
scripts/: plot1D.py  plot_video.py
scripts/legacy/plotting/: _plot_common.py
scripts/misc/: array_of_ranges_algebra.hpp  gen_multi_range_algebra.hpp.py
scripts/plotting/: plot1D.py  plot_video.py
src/: CMakeLists.txt  _modelb_common.hpp  coupled_model_b_switching.cpp  coupled_modelb.cpp  coupled_modelb_diffusion.cpp  fft_test.cpp  gen_spectral_error_data.cpp  generate_fd_error_data.cpp  modelb.cpp  modelb_spectral.cpp  multi_range_algebra.hpp  test_view.cpp
tests/: CMakeLists.txt  test_data_analytics.cpp  test_finite_difference.cpp
